// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple test case TODO [Case insensitive] =if(true, 1+2, "2") // => 3 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "if",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "Plus",
    "display": "+",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"2\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": Array [
      "number",
      "string",
      "boolean",
      "null",
      "Date",
      "Block",
      "Blank",
      "Record",
      "Array",
      "Error",
      "Spreadsheet",
      "Row",
      "Cell",
      "Column",
      "Range",
      "Cst",
      "Reference",
      "Function",
      "Predicate",
      "Button",
      "Switch",
      "literal",
      "Pending",
      "Waiting",
      "NoPersist",
    ],
  },
]
`;

exports[`Simple test case TODO [ParseError without closing quote] = "Hello // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "parseErrorOther",
    "display": "\\"Hello",
    "errors": Array [
      Object {
        "message": "Parse error: \\"\\\\\\"Hello\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
]
`;

exports[`Simple test case TODO [Predicate check type] =>=true // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "boolean",
  },
]
`;

exports[`Simple test case TODO [Predicate check type] =>=true // => ✗ 2`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                20,
                21,
                23,
                24,
              ],
              "categoryMatchesMap": Object {
                "20": true,
                "21": true,
                "23": true,
                "24": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 20,
        },
        "tokenTypeIdx": 20,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "lhs": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "lhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "lhs": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "lhs": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "predicateExpression": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "CompareOperator": Array [
                                                                                          Object {
                                                                                            "endColumn": 3,
                                                                                            "endLine": 1,
                                                                                            "endOffset": 2,
                                                                                            "image": ">=",
                                                                                            "startColumn": 2,
                                                                                            "startLine": 1,
                                                                                            "startOffset": 1,
                                                                                            "tokenType": Object {
                                                                                              "CATEGORIES": Array [
                                                                                                Object {
                                                                                                  "CATEGORIES": Array [],
                                                                                                  "PATTERN": /NOT_APPLICABLE/,
                                                                                                  "categoryMatches": Array [
                                                                                                    19,
                                                                                                    22,
                                                                                                    25,
                                                                                                    26,
                                                                                                  ],
                                                                                                  "categoryMatchesMap": Object {
                                                                                                    "19": true,
                                                                                                    "22": true,
                                                                                                    "25": true,
                                                                                                    "26": true,
                                                                                                  },
                                                                                                  "isParent": true,
                                                                                                  "name": "CompareOperator",
                                                                                                  "tokenTypeIdx": 4,
                                                                                                },
                                                                                              ],
                                                                                              "PATTERN": />=/,
                                                                                              "categoryMatches": Array [],
                                                                                              "categoryMatchesMap": Object {},
                                                                                              "isParent": false,
                                                                                              "name": "GreaterThanEqual",
                                                                                              "tokenTypeIdx": 25,
                                                                                            },
                                                                                            "tokenTypeIdx": 25,
                                                                                          },
                                                                                        ],
                                                                                        "simpleAtomicExpression": Array [
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "constantExpression": Array [
                                                                                                Object {
                                                                                                  "children": Object {
                                                                                                    "BooleanLiteralExpression": Array [
                                                                                                      Object {
                                                                                                        "children": Object {
                                                                                                          "BooleanLiteral": Array [
                                                                                                            Object {
                                                                                                              "endColumn": 7,
                                                                                                              "endLine": 1,
                                                                                                              "endOffset": 6,
                                                                                                              "image": "true",
                                                                                                              "startColumn": 4,
                                                                                                              "startLine": 1,
                                                                                                              "startOffset": 3,
                                                                                                              "tokenType": Object {
                                                                                                                "CATEGORIES": Array [],
                                                                                                                "PATTERN": /\\(\\?:true\\|false\\)\\(\\?!\\[\\^,"'\\\\\`&#@:!\\\\\\$%\\\\\\^<>/\\?\\*=\\.;~\\|\\[\\(\\)\\{\\}\\+\\\\\\\\\\\\-\\\\\\]\\\\s\\]\\)/i,
                                                                                                                "categoryMatches": Array [],
                                                                                                                "categoryMatchesMap": Object {},
                                                                                                                "isParent": false,
                                                                                                                "name": "BooleanLiteral",
                                                                                                                "tokenTypeIdx": 48,
                                                                                                              },
                                                                                                              "tokenTypeIdx": 48,
                                                                                                            },
                                                                                                          ],
                                                                                                        },
                                                                                                        "name": "BooleanLiteralExpression",
                                                                                                      },
                                                                                                    ],
                                                                                                  },
                                                                                                  "name": "constantExpression",
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "simpleAtomicExpression",
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "predicateExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "atomicExpression",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "chainExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "rangeExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "notExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "accessExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                            },
                                            "name": "additionExpression",
                                          },
                                        ],
                                      },
                                      "name": "concatExpression",
                                    },
                                  ],
                                },
                                "name": "inExpression",
                              },
                            ],
                          },
                          "name": "compareExpression",
                        },
                      ],
                    },
                    "name": "equalCompareExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Simple test case TODO [Predicate check type] =>=true // => ✗ 3`] = `
Object {
  "input": "=>=true",
  "inputImage": "=>=true",
  "newInput": "=>=true",
  "parseImage": "=>=true",
}
`;

exports[`Simple test case TODO [Single quote => parseError] = 'hello' // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "parseErrorOther",
    "display": "'hello'",
    "errors": Array [
      Object {
        "message": "Parse error: \\"'hello'\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
]
`;

exports[`Simple test case TODO [TODO 1a1] = 1a1 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "parseErrorOther",
    "display": "a1",
    "errors": Array [
      Object {
        "message": "Not all input parsed: a1",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
]
`;

exports[`Simple test case TODO [TODO chinese] = 中文 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "parseErrorOther",
    "display": "中文",
    "errors": Array [
      Object {
        "message": "Parse error: \\"中文\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
]
`;

exports[`Simple test case TODO [TODO chinese2] =varvarabc中文var // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "varvarabc中文var",
    "errors": Array [
      Object {
        "message": "Unknown function varvarabc中文var",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
]
`;

exports[`Simple test case TODO [TODO predicate ==1] ==1 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Equal2",
    "display": "==",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
]
`;

exports[`Simple test case TODO [caret and sign] = -0.123% // => -0.00123 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "-0.123",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "Sign",
    "display": "%",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
]
`;

exports[`Simple test case TODO [js precision] =123123123123123123123 // => 123123123123123130000 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "123123123123123123123",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
]
`;

exports[`Simple test case TODO [lex error when parse "hel"lo" => parseError] = "hel"lo" // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"hel\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
  },
  Object {
    "attrs": undefined,
    "code": "parseErrorOther",
    "display": "lo\\"",
    "errors": Array [
      Object {
        "message": "Not all input parsed: lo",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
]
`;

exports[`Simple test case TODO [not is a operator] = nottrue // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "nottrue",
    "errors": Array [
      Object {
        "message": "Unknown function nottrue",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
]
`;
